--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,12 +1,18 @@
+$grey: #777777
+.clear-fix:after
+  content: ''
+  display: table
+  width: 100%
+  clear: both
 .wrapper
-  width: 940px
+  max-width: 940px
   margin: 0 auto
 body
-  font-family: Arial,sans-serif
-header
-  background: url("../img/first-bg.jpg")no-repeat top center
-
-  padding-bottom: 160px!important
+  font-family: Arial,sans-serif!important
+.main-header
+  background: url("../img/first-bg.jpg")no-repeat top center/cover
+  padding-bottom: 160px
+  height: 100vh
 .top
   padding-top: 41px
   font-family: Arial,sans-serif
@@ -52,12 +58,53 @@ header
   transition: 0.3s
   &:hover
     background: #e3bb33
-
-
   border-radius: 3px
-  text-transform: uppercase
   font-weight: bold
   margin: 0 auto
+.title
+  font-size: 30px
+  font-weight: bold
+  text-transform: uppercase
+  text-align: center
+  margin: 120px 0 20px 0
+.text
+  font-size: 15px
+  color: #a3a3a3
+  text-align: center
+  margin-bottom: 80px
+.services-item
+  width: 33%
+  float: left
+  box-sizing: border-box
+  padding: 0 30px
+.services-item__img
+  display: block
+  margin: 0 auto
+.services-item__title
+  font-size: 18px
+  font-weight: bold
+  text-align: center
+  margin: 25px 0 23px 0
+
+.services-item__text
+  font-size: 14px
+  color: $grey
+  text-align: center
+  line-height: 1.55em
+  letter-spacing: 1px
+  font-weight: 400
+.services
+  padding-bottom: 120px
+.portfolio-img
+  display: flex
+  justify-content: space-around
+  flex-wrap: wrap
+.portfolio
+  background: #f7f7f7
+  overflow: hidden
+.portfolio-img__item
+  
+  margin: 5px 0
 
 
 
