--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -102,14 +102,48 @@ body
 .portfolio
   background: #f7f7f7
   overflow: hidden
+  padding-bottom: 130px
 .portfolio-img__item
-  
   margin: 5px 0
 
+//  section About us
+
+.month
 
 
+.left
+  text-align: left
+.right
+  text-align: right
+.padding-left
+  padding-left: 40%
+.padding-right
+  padding-right: 40%
 
+.month__title
+  text-transform: uppercase
+  color: #222222
+  font-size: 18px
+  font-weight: 700
 
-
-
-
+.month__under-title
+  color: #222222
+  font-size: 18px
+  font-weight: 700
+  margin: 18px 0 20px 0
+.month__text
+  @extend .text
+  line-height: 20px
+.month__text--right
+  text-align: right
+.month__text--left
+  text-align: left
+.month__img--right
+  float: right
+  margin-left: 40px
+.month__img--left
+  float: left
+  margin-right: 40px
+.copyrite
+  text-align: center
+  padding: 60px 0 110px 0
